# Notebot

./: BotMain.hs  Calc.hs  DB.hs  Notifiers.hs  README  Types.hs  bot.cabal
hsxmpp/_darcs/: hashed_inventory  tentative_pristine
hsxmpp/_darcs/inventories/: 0000005590-686c1cdd43efc0b196703d1a8e76315f06508f409985d25b198191d27927efe0
hsxmpp/_darcs/patches/: 0000000106-cc9dfb1350c2f8cd3c04d67cd5a98411d6076f7c4c1703ca8c4ccf47b4c78e6b  0000000125-a87f74975a717ee21fae5076064244c49c6d6bdb97b89e2d619f6ec5a1759d46  0000000132-0d1fc85288e5aa8950c39c745fdfc41db68a2b7d0de7f0296e881f439ca0bb16  0000000141-0299023b0e603fb7c4c30cf31aeb678a0caed1c8435eb8f0d386d284a4b36a24  0000000184-190146057a5f0b763f60363ecc2e881dd102597fce5164d7ff54c2513e624ca4  0000000190-77fc1cb4b2af63de7ba3d3d0f23b0a37babf5eff1f57797e2941d53373ddd980  0000000210-6d6c2ea21db952ea3765e191d2b3ac2360ef7cc2c13b9800de3aaea69f2406d7  0000000214-1bb8698f1d69ccdb30f8a0798a84cf9dc0f82a83ae50232a614f29d76425cdb9  0000000231-489e9e3abfd6d59a8d184e0190fbf11d21648d7b0784b6728d70f042925a5946  0000000259-3270e98f7323c2e17b935d7eaaa68eae110b8f132061e4a2c48e8dc310da3a14  0000000274-965e64f2c346f11c53270f6f90e58b33c582ec1bbc6e260c63636233d8a0bbbb  0000000304-970b408c0705f8c8237e60b47ec1928b12adf2aa18f1aae2715977c3cf941386  0000000384-55af0a3063c9f489325c556ea1a73be74bed54b8434bc8668e16b2c3ac161523  0000000434-f9f332c66242cd8e1b04b2a03909013770a42555323f64aa1a35541282e2324a  0000000544-59b4426f7a4541a586ded1bc3dcf92cc8c0d669b49bb70c48f601bde4988a22f  0000000581-1246a294170d5d20638644b75cf91b5dc0a77fc40722e579a4a01652e0a19711  (+20 more)
(+35 files in other folders)
